--- a/Back_end/package.json
+++ b/Back_end/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.16.1",
     "compression": "^1.6.2",
+    "cors": "^2.8.5",
     "express": "^4.14.1",
     "lodash": "^4.17.4",
     "morgan": "^1.8.1"
